# cometsuite

./: .gitignore  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  configure.ac
api/: Doxyfile.in
data/: Makefile.am  am-carbon.fits  am-olivine50.fits
doc/: Makefile.am  base.css  cometsuite.texi
doc/userguide/: installguide.tex  userguide.tex
src/: Composition.h  CoordTrans.cc  CoordTrans.h  Distribution.cc  Distribution.h  Dynamical.cc  Dynamical.h  GrainTemperature.cc  GrainTemperature.h  Integrator.cc  Integrator.h  Makefile.am  Physical.cc  Physical.h  StringConv.cc  StringConv.h  Vector.cc  Vector.h  Vej.cc  Vej.h  accutest.cc  everhart.c  getopt.h  integratelist.cc  integratexyz.cc  jettest.cc  logFile.cc  logFile.h  longlat.h  paramSet.cc  paramSet.h  particle.cc  particle.h  particleWeights.cc  particleWeights.h  pfunctions.cc  pfunctions.h  planet_lookup.c  projection.cc  projection.h  (+22 more)
test/: Makefile  Makefile.am  accutest-mc.sh  accutest.sh  accutest1.par  accutest2.par  accutest3.par  comptest.par  comptest.sh  encke-box.par  imagetest.sh  mctest.par  mctest.sh  plots.sh  precistest1.par  rbvtest.sh  rotating-jet1.par  rotating-jet2.par  rtvtest.par  savetest.par  savetest.sh  syntest.par  syntest.sh  thermtest.sh  vejtest.sh  vtest.sh  vtestplot.py
test/scripts/: bindata.awk  plot_accutest.gpl  plot_all.gpl  plot_bindata.gpl  plot_comp.gpl  plot_jettest.gpl  plot_psd.gpl  plot_rbv.gpl  plot_spectra.gpl  plot_therm.gpl  save_plots.gpl
