ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = test/Makefile test/accutest1.par test/accutest2.par	\
             test/accutest3.par test/comptest.par test/mctest.par	\
             test/rtvtest.par test/savetest.par test/syntest.par	\
             test/vtestplot.py test/scripts data
SUBDIRS = src doc data

#data_DATA = data/am-carbon.fits data/am-olivine50.fits
