EXTRA_DIST = accutest1.par accutest2.par accutest3.par \
	     comptest.par mctest.par rtvtest.par savetest.par \
	     syntest.par  vtestplot.py scripts
TESTS = accutest-mc.sh imagetest.sh   rbvtest.sh     thermtest.sh \
        accutest.sh    mctest.sh      savetest.sh    vejtest.sh	\
        comptest.sh    plots.sh       syntest.sh     vtest.sh	
LOG_COMPILER = $(BASH)
